change status to unclaimed after end of month